--- a/getstarted/jvm/helloworld/app/build.gradle
+++ b/getstarted/jvm/helloworld/app/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     // https://mvnrepository.com/artifact/io.socket/socket.io-client
     implementation group: 'io.socket', name: 'socket.io-client', version: '2.1.1'
 
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.2'
+
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
 
